--- a/capsule.html
+++ b/capsule.html
@@ -19,7 +19,7 @@
             <nav class="row">
                 <div class="logo">
                     <img src="./images/logo.png" alt="">
-                    <span>Kelly Pharma</span>
+                    <span>Kelly Pharma Ceuticals</span>
                 </div>
                 <div class="nav-link" id="menu">
                     <!-- responsive menu coontent start -->
@@ -111,8 +111,9 @@
                     <h3>kelyrab-dsr capsule</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>Salf & Effective Way to Gerd In Kids</h5>
-                    <p>Lansoprazole 15mg, Mouth Dissolving</p>
+                    <h5> Continuous Acid Reflux Needs Potent & Fast Cntrol</h5>
+                    <p>Rabeprazole 20mg+Domperidone 30mg SR</p>
+                    <p>Alleviates nausea by accelerating gastric emptying.</p>
                     <button onclick="productDetails('Capsule', './images/cap-1.png', 'kelyrab-dsr capsule')">More Info..</button>
                 </div>
             </div>
@@ -127,8 +128,9 @@
                     <h3>kelyrab-l capsule</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>Salf & Effective Way to Gerd In Kids</h5>
-                    <p class="width : 70%">Lansoprazole 15mg, Mouth Dissolving</p>
+                    <h5>Stomach Regain Its Lost Tone</h5>
+                    <p>Rabeprazole 20mg+Levosulpride 75mg</p>
+                    <p>Lansoprazole 15mg, Mouth Dissolving</p>
                     <button onclick="productDetails('Capsule', './images/cap-2.png', 'kelyrab-l capsule')">More Info..</button>
                 </div>
             </div>
@@ -167,63 +169,62 @@
         </section>
         <!-- contact section end -->
 
-    <footer>
-        <div class="inner-conteiner">
-            <div class="f-logo row">
-                <img src="./images/logo.png" alt="">
-                <span>Kelly Pharma</span>
-            </div>
-            <div class="f-item row">
-                <div class="f-col">
-                    <h3>kelly pharmaceuticals</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur.
-                        ctumst. Amet at mauris amet sit felis non
-                        ac aenean nunc integer. Vestibulum</p>
-
-                    <div class="social_link">
+        <footer>
+            <div class="inner-conteiner">
+                <div class="f-logo row">
+                    <img src="./images/logo.png" alt="">
+                    <span>Kelly Pharma <br> Ceuticals</span>
+                </div>
+                <div class="f-item row">
+                    <div class="f-col">
+                        <h3>kelly pharmaceuticals</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur.
+                            ctumst. Amet at mauris amet sit felis non
+                            ac aenean nunc integer. Vestibulum</p>
+    
+                        <div class="social_link">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="f-col">
+                        <h4>Quick Links</h4>
+                        <ul class="f-nav-link links">
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#">Reviews</a></li>
+                            <li><a href="#">Medicine Page</a></li>
+                            <li><a href="#">Ouer Story</a></li>
+                        </ul>
+                    </div>
+                    <div class="f-col">
+                        <h4>Service</h4>
+                        <ul class="f-nav-link links">
+                            <li><a href="#">Online</a></li>
+                            <li><a href="#">Medicine Categary</a></li>
+                            <li><a href="#">27/7 Service</a></li>
+                            <li><a href="#">Benefit Medicine</a></li>
+                        </ul>
+                    </div>
+                    <div class="f-col">
+                        <h4>Address</h4>
                         <ul>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li>
+                                <a href="#" class="addres-link"> <img src="./images/location.png" alt="">Veena Niwas, Dadi Jee Sweet Lane, Boring Road, Patna-800001, Bihar, India</a>
+                            </li>
+                            <li><a class="addres-link" href="mailto:demo@gmail.com"><img src="./images/email.png" alt="">
+                                    demo@gmail.com</a></li>
+                            <li><a class="addres-link" href="tel:08047304439"><img src="./images/phone.png" alt=""> +
+                               +91 08047304439</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="f-col">
-                    <h4>Quick Links</h4>
-                    <ul class="f-nav-link links">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#">Reviews</a></li>
-                        <li><a href="#blog">Blogs</a></li>
-                        <li><a href="#">Medicine Page</a></li>
-                        <li><a href="#">Ouer Story</a></li>
-                    </ul>
-                </div>
-                <div class="f-col">
-                    <h4>Service</h4>
-                    <ul class="f-nav-link links">
-                        <li><a href="#">Online</a></li>
-                        <li><a href="#">Medicine Categary</a></li>
-                        <li><a href="#">27/7 Service</a></li>
-                        <li><a href="#">Benefit Medicine</a></li>
-                        <li><a href="#">Super Equiments</a></li>
-                    </ul>
-                </div>
-                <div class="f-col">
-                    <h4>Address</h4>
-                    <ul>
-                        <li>
-                           <a href="#" class="addres-link"> <img src="./images/location.png" alt=""> Lorem ipsum dolor sit amet.</a>
-                         </li>
-                        <li><a  class="addres-link" href="mailto:demo@gmail.com"><img src="./images/email.png" alt=""> demo@gmail.com</a></li>
-                        <li><a  class="addres-link" href="tel:123-345-678"><img src="./images/phone.png" alt=""> + 125-345-678</a></li>
-                    </ul>
-                </div>
             </div>
-        </div>
-
-        <p class="copy-right">2023 Good Food. All Right Reserves</p>
-    </footer>
-
+    
+            <p class="copy-right">2023 Good Food. All Right Reserves</p>
+        </footer>
 </body>
 <script src="./js/script.js"></script>
 
