--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
 <body>
     <div class="container-fluide">
+       <div class="main-header">
         <header id="home">
             <nav class="row">
                 <div class="logo">
                     <img src="./images/logo.png" alt="">
-                    <span>Kelly Pharma</span>
+                    <span>Kelly Pharma Ceuticals</span>
                 </div>
                 <div class="nav-link" id="menu">
                     <!-- responsive menu coontent start -->
@@ -43,9 +44,7 @@
                                 <li><a href="./injection.html">INJECTION</a></li>
                             </ul>
                         </li>
-                        <li><a href="#about">about us</a>
-
-                        </li>
+                        <li><a href="#about">about us</a> </li>
                         <li><a href="#product">Our Product</a></li>
                         <li><a href="#contact">contact us</a></li>
                     </ul>
@@ -67,6 +66,7 @@
             </nav>
 
         </header>
+       </div>
         <div class="container row">
             <div class="benar ">
                 <div class="main-title">
@@ -352,7 +352,7 @@
         <div class="inner-conteiner">
             <div class="f-logo row">
                 <img src="./images/logo.png" alt="">
-                <span>Kelly Pharma</span>
+                <span>Kelly Pharma <br> Ceuticals</span>
             </div>
             <div class="f-item row">
                 <div class="f-col">
@@ -374,7 +374,6 @@
                     <ul class="f-nav-link links">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#">Reviews</a></li>
-                        <li><a href="#blog">Blogs</a></li>
                         <li><a href="#">Medicine Page</a></li>
                         <li><a href="#">Ouer Story</a></li>
                     </ul>
@@ -386,20 +385,18 @@
                         <li><a href="#">Medicine Categary</a></li>
                         <li><a href="#">27/7 Service</a></li>
                         <li><a href="#">Benefit Medicine</a></li>
-                        <li><a href="#">Super Equiments</a></li>
                     </ul>
                 </div>
                 <div class="f-col">
                     <h4>Address</h4>
                     <ul>
                         <li>
-                            <a href="#" class="addres-link"> <img src="./images/location.png" alt=""> Lorem ipsum dolor
-                                sit amet.</a>
+                            <a href="#" class="addres-link"> <img src="./images/location.png" alt="">Veena Niwas, Dadi Jee Sweet Lane, Boring Road, Patna-800001, Bihar, India</a>
                         </li>
                         <li><a class="addres-link" href="mailto:demo@gmail.com"><img src="./images/email.png" alt="">
                                 demo@gmail.com</a></li>
-                        <li><a class="addres-link" href="tel:123-345-678"><img src="./images/phone.png" alt=""> +
-                                125-345-678</a></li>
+                        <li><a class="addres-link" href="tel:08047304439"><img src="./images/phone.png" alt=""> +
+                           +91 08047304439</a></li>
                     </ul>
                 </div>
             </div>
