--- a/injection.html
+++ b/injection.html
@@ -18,7 +18,7 @@
             <nav class="row">
                 <div class="logo">
                     <img src="./images/logo.png" alt="">
-                    <span>Kelly Pharma</span>
+                    <span>Kelly Pharma Ceuticals</span>
                 </div>
                 <div class="nav-link" id="menu">
                     <!-- responsive menu coontent start -->
@@ -105,12 +105,13 @@
                     </div>
                 </div>
                 <div class="pro_col mid">
-                    <h3>Rablc Injection</h3>
+                    <h3>Kelyrab-iv Injection</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>Salf & Effective Way to Gerd In Kids</h5>
-                    <p>Lansoprazole 15mg, Mouth Dissolving</p>
-                    <button onclick="productDetails('injection', './images/inj-2.png', 'Rablc Injection')">More Info..</button>
+                    <h5>High Performance Against Reflux Oesophagitis</h5>
+                    <p>Rabeprazole 20mg</p>
+                    <p>A New & effective proton pump inhibitor.</p>
+                    <button onclick="productDetails('injection', './images/inj-2.png', 'Kelyrab-iv Injection')">More Info..</button>
                 </div>
             </div>
 
@@ -124,8 +125,8 @@
                     <h3>kelynerv Injection</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>Salf & Effective Way to Gerd In Kids</h5>
-                    <p class="width : 70%">Lansoprazole 15mg, Mouth Dissolving</p>
+                    <h5>For The Maintenance Of Perfect Neurons.</h5>
+                    <p class="width : 70%">Methylcobalamine 1500mcg+Nicotinamide 100mg+Pyridoxine 100mg</p>
                     <button onclick="productDetails('injection', './images/inj-1.png', 'kelynerv Injection')">More Info..</button>
                 </div>
             </div>
@@ -168,7 +169,7 @@
         <div class="inner-conteiner">
             <div class="f-logo row">
                 <img src="./images/logo.png" alt="">
-                <span>Kelly Pharma</span>
+                <span>Kelly Pharma <br> Ceuticals</span>
             </div>
             <div class="f-item row">
                 <div class="f-col">
@@ -190,7 +191,6 @@
                     <ul class="f-nav-link links">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#">Reviews</a></li>
-                        <li><a href="#blog">Blogs</a></li>
                         <li><a href="#">Medicine Page</a></li>
                         <li><a href="#">Ouer Story</a></li>
                     </ul>
@@ -202,20 +202,18 @@
                         <li><a href="#">Medicine Categary</a></li>
                         <li><a href="#">27/7 Service</a></li>
                         <li><a href="#">Benefit Medicine</a></li>
-                        <li><a href="#">Super Equiments</a></li>
                     </ul>
                 </div>
                 <div class="f-col">
                     <h4>Address</h4>
                     <ul>
                         <li>
-                            <a href="#" class="addres-link"> <img src="./images/location.png" alt=""> Lorem ipsum dolor
-                                sit amet.</a>
+                            <a href="#" class="addres-link"> <img src="./images/location.png" alt="">Veena Niwas, Dadi Jee Sweet Lane, Boring Road, Patna-800001, Bihar, India</a>
                         </li>
                         <li><a class="addres-link" href="mailto:demo@gmail.com"><img src="./images/email.png" alt="">
                                 demo@gmail.com</a></li>
-                        <li><a class="addres-link" href="tel:123-345-678"><img src="./images/phone.png" alt=""> +
-                                125-345-678</a></li>
+                        <li><a class="addres-link" href="tel:08047304439"><img src="./images/phone.png" alt=""> +
+                           +91 08047304439</a></li>
                     </ul>
                 </div>
             </div>
@@ -223,7 +221,6 @@
 
         <p class="copy-right">2023 Good Food. All Right Reserves</p>
     </footer>
-
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
