--- a/syrup.html
+++ b/syrup.html
@@ -18,7 +18,7 @@
             <nav class="row">
                 <div class="logo">
                     <img src="./images/logo.png" alt="">
-                    <span>Kelly Pharma</span>
+                    <span>Kelly Pharma Ceuticals</span>
                 </div>
                 <div class="nav-link" id="menu">
                     <!-- responsive menu coontent start -->
@@ -109,8 +109,9 @@
                     <h3>kelyfull-jr syrup</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>SAFE & eFFECTIVE WAY TO TREAT GERD IN KIDS </h5>
-                    <p>LANSOPRAZOLE 15 MG , MOUTH DISSOLVING </p>
+                    <h5>Support Immunity And Growth</h5>
+                    <p>Lysine+ multivitamins and multiminerals. </p>
+                    <p>Provides a natural supply of essential amino acids and non-essential amino acids</p>
                     <button onclick="productDetails('syrup', './images/cup-1.png', 'kelyfull-jr syrup')">More
                         Info..</button>
                 </div>
@@ -126,8 +127,9 @@
                     <h3>kelyfer-xt syrup</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>SAFE & eFFECTIVE WAY TO TREAT GERD IN KIDS</h5>
-                    <p class="width : 70%">LANSOPRAZOLE 15 MG , MOUTH DISSOLVING </p>
+                    <h5>FERROUS ASCORBATE & FOLIC ACID</h5>
+                    <p>Ferrous ascorbate 30mg + Folic acid 550mcg/ 5ml</p>
+                    <p>Essential for formation of RBCs</p>
                     <button onclick="productDetails('syrup', './images/cup-2.png', 'kelyfer-xt syrup')">More
                         Info..</button>
                 </div>
@@ -143,8 +145,9 @@
                     <h3>kelycef syrup</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>SAFE & eFFECTIVE WAY TO TREAT GERD IN KIDS</h5>
-                    <p class="width : 70%">LANSOPRAZOLE 15 MG , MOUTH DISSOLVING </p>
+                    <h5>Protect The Small Ones Form Harshn Infection</h5>
+                    <p>Cefpodoxime 50mg/100mg</p>
+                    <p>Possesses high stability in the presence of beta-lactamases.</p>
                     <button onclick="productDetails('syrup', './images/cup-3.png', 'kelycef syrup')">More
                         Info..</button>
                 </div>
@@ -160,7 +163,7 @@
                     <h3>kelyzinc syrup</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>better absorption toleability patient compiance </h5>
+                    <h5>The Controller & Maintainer</h5>
                     <p class="width : 70%">ferrous ascorbale 10 mg + folic acid 1.5mg</p>
                     <button onclick="productDetails('syrup', './images/cup-6.png', 'kelyzinc syrup')">More
                         Info..</button>
@@ -177,29 +180,14 @@
                     <h3>Kelymox syrup</h3>
                 </div>
                 <div class="pro_col">
-                    <p>Amoxiciline+Clavulanic Acid</p>
-                    <p class="width : 70%">Active Against a Wide Range of Bacteria including Beta-Lactamase Producers</p>
+                    <h5>Amoxiciline+Clavulanic Acid</h5>
+                    <p>Amoxiciline + clavulanic acid</p>
+                    <p>Excellent clinical result in varied infections</p>
                     <button onclick="productDetails('syrup', './images/cup-4.png', 'Kelymox')">More
                         Info..</button>
                 </div>
             </div>
 
-            <div class="prod_row row">
-                <div class="pro_col">
-                    <div class="tab_image">
-                        <img src="./images/cup-5.png" alt="">
-                    </div>
-                </div>
-                <div class="pro_col mid">
-                    <h3>Kelycef Dry Syrup</h3>
-                </div>
-                <div class="pro_col">
-                    <p>Cefpodoxime 50mg/100mg</p>
-                    <p class="width : 70%">Highly Active Against a Wide Spectrum Of Gram- Positive and Gram-Nagative Bacteria.</p>
-                    <button onclick="productDetails('syrup', './images/cup-5.png', 'Kelycef Dry Syrup')">More
-                        Info..</button>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -238,7 +226,7 @@
         <div class="inner-conteiner">
             <div class="f-logo row">
                 <img src="./images/logo.png" alt="">
-                <span>Kelly Pharma</span>
+                <span>Kelly Pharma <br> Ceuticals</span>
             </div>
             <div class="f-item row">
                 <div class="f-col">
@@ -260,7 +248,6 @@
                     <ul class="f-nav-link links">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#">Reviews</a></li>
-                        <li><a href="#blog">Blogs</a></li>
                         <li><a href="#">Medicine Page</a></li>
                         <li><a href="#">Ouer Story</a></li>
                     </ul>
@@ -272,20 +259,18 @@
                         <li><a href="#">Medicine Categary</a></li>
                         <li><a href="#">27/7 Service</a></li>
                         <li><a href="#">Benefit Medicine</a></li>
-                        <li><a href="#">Super Equiments</a></li>
                     </ul>
                 </div>
                 <div class="f-col">
                     <h4>Address</h4>
                     <ul>
                         <li>
-                            <a href="#" class="addres-link"> <img src="./images/location.png" alt=""> Lorem ipsum dolor
-                                sit amet.</a>
+                            <a href="#" class="addres-link"> <img src="./images/location.png" alt="">Veena Niwas, Dadi Jee Sweet Lane, Boring Road, Patna-800001, Bihar, India</a>
                         </li>
                         <li><a class="addres-link" href="mailto:demo@gmail.com"><img src="./images/email.png" alt="">
                                 demo@gmail.com</a></li>
-                        <li><a class="addres-link" href="tel:123-345-678"><img src="./images/phone.png" alt=""> +
-                                125-345-678</a></li>
+                        <li><a class="addres-link" href="tel:08047304439"><img src="./images/phone.png" alt=""> +
+                           +91 08047304439</a></li>
                     </ul>
                 </div>
             </div>
