--- a/tablets.html
+++ b/tablets.html
@@ -14,11 +14,11 @@
 <body>
 
     <div class="product-page">
-        <header id="home">
+        <header class="sticky" id="home">
             <nav class="row">
                 <div class="logo">
                     <img src="./images/logo.png" alt="">
-                    <span>Kelly Pharma</span>
+                    <span>Kelly Pharma Ceuticals</span>
                 </div>
                 <div class="nav-link" id="menu">
                     <!-- responsive menu coontent start -->
@@ -109,6 +109,7 @@
                 <div class="pro_col">
                     <h5>control acidity relive symptoms</h5>
                     <p>rabeprazole 20mg</p>
+                    <p>Significantly increases the pH</p>
                     <button onclick="productDetails('Tablet', './images/tab-6.png', 'kELYRAB-20 Tablet')">More Info..</button>
                 </div>
             </div>
@@ -142,7 +143,7 @@
                 <div class="pro_col">
                     <h5>versatile antibiotic against multiple infections</h5>
                     <p>Cefpodoixime 200mg </p>
-                        <button onclick="productDetails('Tablet', './images/tab-8.png', 'kelycef - 200 Tablet')">More Info..</button>
+                        <button onclick="productDetails('Tablet', './images/tab-8.png', 'kelycef-200 Tablet')">More Info..</button>
                 </div>
             </div>
 
@@ -204,7 +205,7 @@
                     <h3>kwikril-sp tablet</h3>
                 </div>
                 <div class="pro_col">
-                    <h5>get satisfied relief during spasm</h5>
+                    <h5>Gceclofenac 1 GOmg1 ; Parf:_zeBTg_gl 325mg + Serratiopeptidase 15mg</h5>
                     <p>aceclofenac 100 mg + paracetamol 325 mg+ serratiopeptidase 15mg </p>
                     <button onclick="productDetails('Tablet', './images/tab-9.png', 'kwikril-sp tablet')">More Info..</button>
 
@@ -264,7 +265,7 @@
         <div class="inner-conteiner">
             <div class="f-logo row">
                 <img src="./images/logo.png" alt="">
-                <span>Kelly Pharma</span>
+                <span>Kelly Pharma <br> Ceuticals</span>
             </div>
             <div class="f-item row">
                 <div class="f-col">
@@ -286,7 +287,6 @@
                     <ul class="f-nav-link links">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#">Reviews</a></li>
-                        <li><a href="#blog">Blogs</a></li>
                         <li><a href="#">Medicine Page</a></li>
                         <li><a href="#">Ouer Story</a></li>
                     </ul>
@@ -298,20 +298,18 @@
                         <li><a href="#">Medicine Categary</a></li>
                         <li><a href="#">27/7 Service</a></li>
                         <li><a href="#">Benefit Medicine</a></li>
-                        <li><a href="#">Super Equiments</a></li>
                     </ul>
                 </div>
                 <div class="f-col">
                     <h4>Address</h4>
                     <ul>
                         <li>
-                            <a href="#" class="addres-link"> <img src="./images/location.png" alt=""> Lorem ipsum dolor
-                                sit amet.</a>
+                            <a href="#" class="addres-link"> <img src="./images/location.png" alt="">Veena Niwas, Dadi Jee Sweet Lane, Boring Road, Patna-800001, Bihar, India</a>
                         </li>
                         <li><a class="addres-link" href="mailto:demo@gmail.com"><img src="./images/email.png" alt="">
                                 demo@gmail.com</a></li>
-                        <li><a class="addres-link" href="tel:123-345-678"><img src="./images/phone.png" alt=""> +
-                                125-345-678</a></li>
+                        <li><a class="addres-link" href="tel:08047304439"><img src="./images/phone.png" alt=""> +
+                           +91 08047304439</a></li>
                     </ul>
                 </div>
             </div>
